Edited news file

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
         <p> The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."</p>
         <a href="documents/resume.html">Resume</a>
-        <a href="news.html">News</a>
+        <a href="news.html">News Page</a>
         <a href="contact.html">Contact</a>
         <a href="index.html">Index</a>
     </body>
