Edited about file

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <p> The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."</p>
         <a href="documents/resume.html">Resume</a>
         <a href="news.html">News Page</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact NUmber</a>
         <a href="index.html">Index</a>
     </body>
 </html>
